--- a/src/app/private/pages/layout/layout.component.scss
+++ b/src/app/private/pages/layout/layout.component.scss
@@ -1,26 +1,78 @@
-.seleccionado {
+.layout-toolbar
+{
     background-color: var(--color-principal);
-    color: var(--color-terciario);
-    list-style: square;
+    color: white;
+
+    & span.spacer { flex: 1 1 auto; }
+
+    & button{ display: grid; place-items: center; }
+
+    & img{ width: 60px; }
 }
 
-#navBar {
-    transition: transform 0.9s ease-in-out, opacity 0.9s ease-in-out;
-}
-
-.informacion-usuario {
-    width: 30vh;
-    background-color: var(--color-terciario);
-    position: absolute;
-    top: 80%;
-    transform: translateX(-85%);
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 10px;
-    z-index: 1000;
+div.body-container
+{
+    height: 100%;
+    background-color: var(--bs-gray-200);
 
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+
+    & .drawer-container {
+        flex: 1 1 auto;
+        padding: 20px;
+    }
+
+    & .sidenav-container {
+        width: calc(100% - 20px);
+        padding: 20px 20px 20px 0;
+    }
 }
+
+.route-active
+{
+    background-color: rgba($color: #000000, $alpha: 0.05) !important;
+    font-weight: 500;
+}
+
+.router-link:hover
+{
+    background-color: rgba($color: #000000, $alpha: 0.1) !important;
+}
+
+@media screen and (min-width: 600px)
+{
+    div.body-container {
+        & .sidenav-container {
+            min-width: 250px;
+            width: unset;
+        }
+    }
+}
+
+// .seleccionado {
+//     background-color: var(--color-principal);
+//     color: var(--color-terciario);
+//     list-style: square;
+// }
+
+// #navBar {
+//     transition: transform 0.9s ease-in-out, opacity 0.9s ease-in-out;
+// }
+
+// .informacion-usuario {
+//     width: 30vh;
+//     background-color: var(--color-terciario);
+//     position: absolute;
+//     top: 80%;
+//     transform: translateX(-85%);
+//     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+//     border-radius: 8px;
+//     padding: 10px;
+//     z-index: 1000;
+
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     text-align: center;
+// }
