--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -13,7 +13,7 @@
             <div class="form-container">
                 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
                     <div class="form-floating mb-3">
-                        <h2>Iniciar Sesion</h2>
+                        <p class="h3 text-center">Iniciar Sesion</p>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="correo" placeholder="name@example.com" formControlName="correo">
