--- a/src/app/private/pages/personal/personal.component.html
+++ b/src/app/private/pages/personal/personal.component.html
@@ -131,47 +131,49 @@
             </mat-paginator>
         </div>
     </section>
-    <section class="row d-lg-none">
-        <div class="col-lg-6 col-12 card shadow-sm p-3 mb-4">
-            <div class="card-body">
-                <h5 class="card-title fw-bold">Jesus Martin Lucero Cuzque</h5>
-                <p class="text-muted mb-2">Id: 1</p>
-                <div class="row mb-2">
-                    <div class="col-8"><strong>Tipo de documento:</strong></div>
-                    <div class="col-4 text-end">DNI</div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-7"><strong>N° de documento</strong></div>
-                    <div class="col-5 text-end">70556212</div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-6"><strong>Telefono:</strong></div>
-                    <div class="col-6 text-end">997442247</div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-4"><strong>Correo:</strong></div>
-                    <div class="col-8 text-end">jeshulucero14&#64;hotmail.com</div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-6"><strong>Estado:</strong></div>
-                    <div class="col-6 text-end">Activo</div>
-                </div>
-
-                <div class="row mb-2">
-                    <div class="col-3"><strong>Rol:</strong></div>
-                    <div class="col-9 text-end">Super-Administrador</div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-5"><strong>Sucursal:</strong></div>
-                    <div class="col-7 text-end">Puente Piedra</div>
-                </div>
-                <div class="row g-1">
-                    <button class="btn col-12">Asignar Responsable</button>
-                    <button class="btn col-12">Editar</button>
-                    <button class="btn col-12">Eliminar</button>
+    <section class="row d-lg-none gy-3">
+        @for(personal of Personales; track $index) {
+            <div class="col-lg-6 col-12 card shadow-sm p-3">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold">{{ personal.nombre }}</h5>
+                    <p class="text-muted mb-2">Id: {{ personal.id }}</p>
+                    <div class="row mb-2">
+                        <div class="col-8"><strong>Tipo de documento:</strong></div>
+                        <div class="col-4 text-end">{{ personal.tipoDocumento }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-7"><strong>N° de documento</strong></div>
+                        <div class="col-5 text-end">{{ personal.numeroDocumento }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-6"><strong>Telefono:</strong></div>
+                        <div class="col-6 text-end">{{ personal.telefono }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-4"><strong>Correo:</strong></div>
+                        <div class="col-8 text-end">{{ personal.correo }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-6"><strong>Estado:</strong></div>
+                        <div class="col-6 text-end">{{ personal.estado }}</div>
+                    </div>
+    
+                    <div class="row mb-2">
+                        <div class="col-3"><strong>Rol:</strong></div>
+                        <div class="col-9 text-end">{{ personal.rol }}</div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-5"><strong>Sucursal:</strong></div>
+                        <div class="col-7 text-end">{{ personal.sucursal }}</div>
+                    </div>
+                    <div class="row g-1">
+                        <button class="btn col-12">Asignar Responsable</button>
+                        <button class="btn col-12">Editar</button>
+                        <button class="btn col-12">Eliminar</button>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
 
     </section>
 </div>
