--- a/src/app/private/pages/personal/personal.component.html
+++ b/src/app/private/pages/personal/personal.component.html
@@ -3,6 +3,8 @@
         <h1>Personal</h1>
         <hr>
     </section>
+
+    <!--
     <form [formGroup]="formulario">
         <div class="row g-2 d-flex justify-content-between">
             <div class="col-xs-4 col-sm-6 col-md-6 col-xl-2">
@@ -39,12 +41,20 @@
             </div>
         </div>
     </form>
-    <section class="row g-2 mt-3">
-        <div class="d-flex justify-content-end">
-            <button class="btn" (click)="AgregarPersonal()"
+    -->
+
+
+
+    <section class="row">
+        <div class="">
+            <input class="form-control col-12 col-lg-8 mb-3" [formControl]="busquedaControl"
+                placeholder="Buscar por nombre, documento, sucursal...">
+        </div>
+        <div class="">
+            <button class="btn col-12 col-lg-4 col-xxl-2 mb-3" (click)="AgregarPersonal()"
                 style="background-color: var(--color-principal); color: var(--color-terciario);">
                 <i class="bi bi-plus"></i>
-                Agregar
+                Agregar Personal
             </button>
         </div>
     </section>
@@ -131,48 +141,49 @@
             </mat-paginator>
         </div>
     </section>
+
     <section class="row d-lg-none gy-3">
-        @for(personal of Personales; track $index) {
-            <div class="col-lg-6 col-12 card shadow-sm p-3">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">{{ personal.nombre }}</h5>
-                    <p class="text-muted mb-2">Id: {{ personal.id }}</p>
-                    <div class="row mb-2">
-                        <div class="col-8"><strong>Tipo de documento:</strong></div>
-                        <div class="col-4 text-end">{{ personal.tipoDocumento }}</div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-7"><strong>N° de documento</strong></div>
-                        <div class="col-5 text-end">{{ personal.numeroDocumento }}</div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-6"><strong>Telefono:</strong></div>
-                        <div class="col-6 text-end">{{ personal.telefono }}</div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-4"><strong>Correo:</strong></div>
-                        <div class="col-8 text-end">{{ personal.correo }}</div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-6"><strong>Estado:</strong></div>
-                        <div class="col-6 text-end">{{ personal.estado }}</div>
-                    </div>
-    
-                    <div class="row mb-2">
-                        <div class="col-3"><strong>Rol:</strong></div>
-                        <div class="col-9 text-end">{{ personal.rol }}</div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-5"><strong>Sucursal:</strong></div>
-                        <div class="col-7 text-end">{{ personal.sucursal }}</div>
-                    </div>
-                    <div class="row g-1">
-                        <button class="btn col-12">Asignar Responsable</button>
-                        <button class="btn col-12">Editar</button>
-                        <button class="btn col-12">Eliminar</button>
-                    </div>
+        @for(personal of PersonalesFiltrados; track $index) {
+        <div class="col-lg-6 col-12 card shadow-sm p-3">
+            <div class="card-body">
+                <h5 class="card-title fw-bold">{{ personal.nombre }}</h5>
+                <p class="text-muted mb-2">Id: {{ personal.id }}</p>
+                <div class="row mb-2">
+                    <div class="col-8"><strong>Tipo de documento:</strong></div>
+                    <div class="col-4 text-end">{{ personal.tipoDocumento }}</div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-7"><strong>N° de documento</strong></div>
+                    <div class="col-5 text-end">{{ personal.numeroDocumento }}</div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-6"><strong>Telefono:</strong></div>
+                    <div class="col-6 text-end">{{ personal.telefono }}</div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-4"><strong>Correo:</strong></div>
+                    <div class="col-8 text-end">{{ personal.correo }}</div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-6"><strong>Estado:</strong></div>
+                    <div class="col-6 text-end">{{ personal.estado }}</div>
+                </div>
+
+                <div class="row mb-2">
+                    <div class="col-3"><strong>Rol:</strong></div>
+                    <div class="col-9 text-end">{{ personal.rol }}</div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-5"><strong>Sucursal:</strong></div>
+                    <div class="col-7 text-end">{{ personal.sucursal }}</div>
+                </div>
+                <div class="row g-1">
+                    <button class="btn btn-outline-danger col-12">Asignar Responsable</button>
+                    <button class="btn btn-outline-danger col-12">Editar</button>
+                    <button class="btn btn-danger col-12">Eliminar</button>
                 </div>
             </div>
+        </div>
         }
 
     </section>
