--- a/src/app/private/pages/gestion-mesa/pagar-pedido/pagar-pedido.component.html
+++ b/src/app/private/pages/gestion-mesa/pagar-pedido/pagar-pedido.component.html
@@ -48,21 +48,37 @@
                         <div class="col-12">
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="checkNativeSwitch"
-                                    (change)="ModificarColumnas()" switch>
+                                    (change)="ModificarColumnas()" switch [checked]="this.cuentaDividas">
                                 <label class="form-check-label" for="checkNativeSwitch">
                                     Cuentas Separadas
                                 </label>
                             </div>
                         </div>
+                        <div class="col-4 row" *ngIf="this.cuentaDividas">
+                            <label for="desc" class="col-6 col-form-label">Nro. Documento: </label>
+                            <div class="col-6">
+                                <input type="text" class="form-control" id="desc" (blur)="BuscarCliente()"
+                                    [(ngModel)]="this.numeroDocumento">
+                            </div>
+                        </div>
+                        <div class="col-6" *ngIf="this.cuentaDividas">
+                            <strong>
+                                Usuario para cuenta dividida:
+                            </strong>
+                            {{this.clienteAsignado.nombre}}
+                        </div>
+
                         <div [ngClass]="{'col-6': this.cuentaDividas, 'col-12' : !this.cuentaDividas}">
+                            <h2>Cuenta original</h2>
                             <table mat-table [dataSource]="dataSource">
                                 <ng-container matColumnDef="Compartido">
                                     <th mat-header-cell *matHeaderCellDef> Compartido </th>
                                     <td mat-cell *matCellDef="let element">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="checkDefault"
-                                                (change)="DividirCuentas(element)">
-                                        </div>
+                                        <button class="btn btn-primary" (click)="DividirCuentas(element)"
+                                            style="background-color: var(--color-principal); border-color: var(--color-terciario);"
+                                            *ngIf="element.cantidad !== 0">
+                                            <i class="bi bi-arrow-right"></i>
+                                        </button>
                                     </td>
                                     <td mat-footer-cell *matFooterCellDef></td>
                                 </ng-container>
@@ -98,7 +114,21 @@
                         </div>
 
                         <div *ngIf="this.cuentaDividas" class="col-6">
+
+                            <h2>Nueva cuenta</h2>
                             <table mat-table [dataSource]="dataSourceDivididas">
+                                <ng-container matColumnDef="Compartido">
+                                    <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button class="btn btn-primary" (click)="RegresarCuentas(element)"
+                                            style="background-color: var(--color-principal); border-color: var(--color-terciario);"
+                                            *ngIf="element.cantidad !== 0">
+                                            <i class="bi bi-arrow-left"></i>
+                                        </button>
+                                    </td>
+                                    <td mat-footer-cell *matFooterCellDef></td>
+                                </ng-container>
+
                                 <ng-container matColumnDef="Plato">
                                     <th mat-header-cell *matHeaderCellDef> Plato </th>
                                     <td mat-cell *matCellDef="let element"> {{element.plato}} </td>
@@ -127,7 +157,29 @@
                                 <tr mat-row *matRowDef="let row; columns: displayedColumnsCuentaDividida;"></tr>
                                 <tr mat-footer-row *matFooterRowDef="displayedColumnsCuentaDividida; sticky: true"></tr>
                             </table>
+
+                            <section>
+                                <button class="btn btn-primary" (click)="SepararPerdido()"
+                                    [disabled]="HabilitarBotonDividir()"
+                                    style="background-color: var(--color-principal); border-color: var(--color-terciario);">
+                                    <i class="bi bi-plus fs-5"></i> Separar Cuenta
+
+                                </button>
+
+                            </section>
                         </div>
+                        <div>
+                            <br>
+                            <div class="card" *ngFor="let item of this.pedidosMuestras">
+                                <div class="card-body">
+                                    {{item.numeroDocumento}} - {{item.cliente}} - S/. {{item.total}}
+                                    <button class="btn btn-primary float-end"
+                                        style="background-color: var(--color-principal); border-color: var(--color-terciario);">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
