--- a/src/app/private/components/modals/user-informacion/user-informacion.component.html
+++ b/src/app/private/components/modals/user-informacion/user-informacion.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow-sm p-3 border rounded" style="max-width: 400px;">
+<div class="card shadow-sm p-2 pt-0 border" style="max-width: 400px;">
   
   <div class="row mx-1">
     <div class="d-flex justify-content-center align-items-center col-4" id="login-icon-profile">
@@ -6,14 +6,14 @@
     </div>
 
     <div class="mt-3 col-8">
-      <p class="mb-1"><strong>Nombre completo</strong><br>Lucero Abel Quispe Toledo De La Fuente</p>
-      <p class="mb-3"><strong>Rol</strong><br>Administrador</p>
+      <p class="mb-1"><strong>Nombre completo</strong><br>{{ userData.nombreCompleto }}</p>
+      <p class="mb-3"><strong>Rol</strong><br>{{ userData.nombreRol }}</p>
     </div>
   </div>
 
   <div class="d-flex justify-content-between p-1">
-    <button class="btn btn-danger w-50 me-2">Cerrar sesión</button>
-    <button class="btn btn-outline-danger w-50">Editar información</button>
+    <button class="btn btn-danger w-50 me-2" (click)="onLogout()">Cerrar sesión</button>
+    <!-- <button class="btn btn-outline-danger w-50">Editar información</button> -->
   </div>
 
 </div>
