--- a/src/app/private/pages/piso/piso.component.html
+++ b/src/app/private/pages/piso/piso.component.html
@@ -3,44 +3,38 @@
         <h1>Piso</h1>
         <hr>
     </section>
-    <form [formGroup]="formulario">
-        <div class="row g-2 d-flex justify-content-between">
-            <div class="col-xs-4 col-sm-8 col-md-4 col-xl-4">
-                <div class="form-floating">
-                    <input type="email" class="form-control" id="sucursal" placeholder="Nombre..."
-                        formControlName="nombre">
-                    <label for="sucursal">Nombre...</label>
+    <section class="mb-3">
+        <div class="row g-2 mb-3">
+            <div class="col-12 col-lg-5">
+                <label class="mb-1">Filtrar todo:</label>
+                <input class="form-control" [formControl]="busquedaControl"
+                    placeholder="Buscar por nombre de rol o estado...">
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <label for="floatingSelect" class="mb-1">Sucursal:</label>
+                <div [formGroup]="formulario">
+                    <select class="form-select" formControlName="sucursal" id="floatingSelect">
+                        <option value="0" selected>Seleccione</option>
+                        <option *ngFor="let rol of Sucursales" [value]="rol.nombre">{{ rol.nombre }}</option>
+                    </select>
                 </div>
             </div>
-            <div class="form-floating col-xs-4 col-sm-6 col-md-4 col-xl-4">
-                <select class="form-select" formControlName="sucursal" id="rol" id="floatingSelect"
-                    aria-label="Floating label select example">
-                    <option value="0" selected>Seleccione</option>
-                    <option *ngFor="let rol of this.Sucursales" value="{{rol.id}}">
-                        {{rol.nombre}}
-                    </option>
-                </select>
-                <label for="floatingSelect">Sucursal...</label>
-            </div>
-            <div class="col-xs-4 col-sm-2 col-md-4 col-xl-4 d-flex justify-content-end">
-                <button (click)="ObtenerPiso()" class="btn"
-                    style="height: 58px; width:  58px; background-color: var(--color-principal);">
-                    <i class="bi bi-search" style="color: var(--color-terciario); font-size: 20px;"></i>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-lg-2">
+                <button class="btn w-100" (click)="AgregarPiso()"
+                    style="background-color: var(--color-principal); color: var(--color-terciario);">
+                    <i class="bi bi-plus"></i>
+                    Agregar Piso
                 </button>
             </div>
         </div>
-    </form>
-    <section class="row g-2 mt-3">
-        <div class="d-flex justify-content-end">
-            <button class="btn" (click)="AgregarPiso()"
-                style="background-color: var(--color-principal); color: var(--color-terciario);">
-                <i class="bi bi-plus"></i>
-                Agregar
-            </button>
-        </div>
     </section>
+
     <section>
-        <div class="mat-elevation-z8" style="overflow-x: auto;">
+        <div class="mat-elevation-z8 d-none d-lg-block" style="overflow-x: auto;">
             <table mat-table [dataSource]="dataSource">
                 <ng-container matColumnDef="Nro">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -103,4 +97,7 @@
             </mat-paginator>
         </div>
     </section>
+
+    <app-piso-minicard-component [PisoFiltrados]="PisoFiltrados"></app-piso-minicard-component>
+
 </div>
