--- a/src/app/private/pages/sucursal/agregar-editar-sucursal/agregar-editar-sucursal.component.html
+++ b/src/app/private/pages/sucursal/agregar-editar-sucursal/agregar-editar-sucursal.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title">{{this.titulo}} Personal</h2>
+        <h2 class="modal-title">{{this.titulo}} Sucursal</h2>
         <button type="button" class="btn-close" (click)="CerrarModal()"></button>
       </div>
       <div class="modal-body">
