--- a/src/app/private/pages/layout/layout.component.html
+++ b/src/app/private/pages/layout/layout.component.html
@@ -4,7 +4,7 @@
             <mat-icon>menu</mat-icon>
         </button>
         <span class="spacer"></span>
-        <img src="img/Logo.png" alt="Logo">
+        <a routerLink="/intranet"><img src="img/Logo.png" alt="Logo"></a>
         <span class="spacer"></span>
         <button mat-icon-button (click)="showUserInfo()">
             <mat-icon>person</mat-icon>
@@ -38,8 +38,6 @@
                 </mat-accordion>
             </div>
         </mat-drawer>
-        <div class="bg-white p-3 rounded-4">
-            <router-outlet></router-outlet>
-        </div>
+        <router-outlet></router-outlet>
     </mat-drawer-container>
 </div>
