--- a/src/app/private/pages/rol/rol.component.html
+++ b/src/app/private/pages/rol/rol.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg-white p-3 rounded-4">
     <section>
         <h1>Rol</h1>
         <hr>
