--- a/src/app/private/pages/sucursal/sucursal.component.html
+++ b/src/app/private/pages/sucursal/sucursal.component.html
@@ -1,35 +1,23 @@
-<div class="container-fluid">
+<div class="container-fluid bg-white p-3 rounded-4">
     <section>
         <h1>Sucursal</h1>
         <hr>
     </section>
-    <form [formGroup]="formulario">
-        <div class="row g-2 d-flex justify-content-between">
-            <div class="col-xs-4 col-sm-8 col-md-6 col-xl-6">
-                <div class="form-floating">
-                    <input type="email" class="form-control" id="sucursal" placeholder="Nombre..."
-                        formControlName="sucursal">
-                    <label for="sucursal">Nombre...</label>
-                </div>
-            </div>
-            <div class="col-xs-4 col-sm-2 col-md-6 col-xl-6 d-flex justify-content-end">
-                <button (click)="buscarSucursalPorNombre()" class="btn"
-                    style="height: 58px; width:  58px; background-color: var(--color-principal);">
-                    <i class="bi bi-search" style="color: var(--color-terciario); font-size: 20px;"></i>
-                </button>
-            </div>
+
+    <section class="row">
+        <div class="">
+            <input class="form-control col-12 col-lg-8 mb-3" [formControl]="filterControl"
+                placeholder="Buscar por nombre, documento, sucursal...">
         </div>
-    </form>
-    <section class="row g-2 mt-3">
-        <div class="d-flex justify-content-end">
-            <button class="btn" (click)="AgregarSucursal()"
+        <div class="">
+            <button class="btn col-12 col-lg-2 col-xl-2 col-xxl-1 mb-3" (click)="AgregarSucursal()"
                 style="background-color: var(--color-principal); color: var(--color-terciario);">
                 <i class="bi bi-plus"></i>
                 Agregar
             </button>
         </div>
     </section>
-    <section>
+    <section class="d-none d-lg-block">
         <div class="mat-elevation-z8" style="overflow-x: auto;">
             <table mat-table [dataSource]="dataSource">
                 <ng-container matColumnDef="Nro">
@@ -110,4 +98,6 @@
             </mat-paginator>
         </div>
     </section>
+
+    <app-sucursal-minicard-component [FilteredSucursales]="SucursalesFiltradas"></app-sucursal-minicard-component>
 </div>
