--- a/src/app/private/pages/layout/layout.component.scss
+++ b/src/app/private/pages/layout/layout.component.scss
@@ -31,13 +31,15 @@ div.body-container
 
 .route-active
 {
-    background-color: rgba($color: #000000, $alpha: 0.05) !important;
+    background-color: rgba($color: #DD0B14, $alpha: 0.05) !important;
     font-weight: 500;
+    color: #DD0B14 !important;
 }
 
 .router-link:hover
 {
-    background-color: rgba($color: #000000, $alpha: 0.1) !important;
+    background-color: rgba($color: #DD0B14, $alpha: 0.1) !important;
+    color: #DD0B14 !important;
 }
 
 @media screen and (min-width: 600px)
