--- a/src/app/private/pages/personal/personal.component.html
+++ b/src/app/private/pages/personal/personal.component.html
@@ -7,34 +7,55 @@
     <section class="mb-3">
 
         <div class="row g-2 mb-2 align-items-end">
-            <div class="col-12 col-md-6 col-lg-4">
+
+            <div class="col-12 col-lg-5">
                 <label class="mb-1">Filtrar todo:</label>
-                <input class="form-control" [formControl]="busquedaControl"
+                <input class="form-control col-12 col-lg-8" [formControl]="busquedaControl"
                     placeholder="Buscar por nombre, documento, sucursal...">
             </div>
 
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <label class="mb-1">Filtrar por:</label>
-                <select class="form-select" [(ngModel)]="criterioSeleccionado" (change)="actualizarOpcionesFiltro()">
-                    <option value="" disabled selected>Seleccione criterio</option>
-                    <option value="tipoDocumento">Tipo de Documento</option>
-                    <option value="estado">Estado</option>
+                <select class="form-select" [(ngModel)]="criterioSeleccionado" (change)="actualizarCampoFiltro()">
+                    <option value="" disabled selected>Seleccione</option>
+                    <option value="codigoPersonal">Código personal</option>
+                    <option value="numeroDocumento">Número de documento</option>
+                    <option value="nombre">Nombre</option>
                     <option value="rol">Rol</option>
-                    <option value="sucursal">Sucursal</option>
                 </select>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-3" *ngIf="opcionesFiltro.length > 0">
-                <label class="mb-1">Opciones:</label>
-                <select class="form-select" [(ngModel)]="valorSeleccionado" (change)="filtrarPorCriterio()">
-                    <option *ngFor="let opcion of opcionesFiltro" [value]="opcion">{{ opcion }}</option>
+            @if (mostrarInput) {
+            <div class="col-12 col-md-4 col-lg-3">
+                <label class="mb-1">Buscar:</label>
+                <input class="form-control" [(ngModel)]="valorInput" (input)="filtrarPorTexto()"
+                    placeholder="Busca aquí" />
+            </div>
+            }
+
+            @if (mostrarSelect) {
+            <div class="col-12 col-md-4 col-lg-3">
+                <label class="mb-1">Seleccione Rol:</label>
+                <select class="form-select" [(ngModel)]="valorSeleccionado" (change)="filtrarPorRol()">
+                    <option value="" disabled selected>Seleccione</option>
+                    <option *ngFor="let rol of Roles" [value]="rol.nombre">{{ rol.nombre }}</option>
                 </select>
             </div>
+            }
 
-            <div class="col-12 col-lg-2">
-                <button class="btn w-100" (click)="AgregarPersonal()"
+            <div class="col-12 col-md-4 col-lg-1">
+                <button class="btn btn-outline-danger" (click)="limpiarFiltros()">
+                    <i class=""></i> Limpiar filtros
+                </button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div>
+                <button class="btn col-12 col-lg-4 col-xxl-2" (click)="AgregarPersonal()"
                     style="background-color: var(--color-principal); color: var(--color-terciario);">
-                    <i class="bi bi-plus"></i> Agregar Personal
+                    <i class="bi bi-plus"></i>
+                    Agregar Personal
                 </button>
             </div>
         </div>
