--- a/src/app/private/pages/piso/piso.component.html
+++ b/src/app/private/pages/piso/piso.component.html
@@ -22,9 +22,9 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="">
-                <button class="btn col-12 col-lg-4 col-xxl-2" (click)="AgregarPiso()"
+        <div class="row g-2 mb-2">
+            <div class="col-12 col-lg-4 col-xxl-2">
+                <button class="btn w-100" (click)="AgregarPiso()"
                     style="background-color: var(--color-principal); color: var(--color-terciario);">
                     <i class="bi bi-plus"></i>
                     Agregar Piso
