--- a/src/app/private/pages/rol/agregar-menu-rol/agregar-menu-rol.component.html
+++ b/src/app/private/pages/rol/agregar-menu-rol/agregar-menu-rol.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade show" id="exampleModalLive" tabindex="-1" style="display: block;">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h2 class="modal-title">{{this.titulo}} Menu para el Rol</h2>
